updated index with basic site structure and created image folder with a profile pic

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Kenn's Keystone Habits for 2017</title>
+</head>
+<body>
+<h1>Kenn's Keystone Habits for 2017</h1>
+<h2>Introduction</h2>
+<h2>Early Riser with a Morning Routine</h2>
+<h2>Meditation</h2>
+<h2>Runner</h2>
+</body>
+</html>
