Added heading structure to index, added meditation folder to image folder, and created runningLog html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
 	<title>Kenn's Keystone Habits for 2017</title>
 </head>
-<body>
-<h1>Kenn's Keystone Habits for 2017</h1>
+<body bgcolor = 525252 text=EA9090>
+<h1 >Three Keystone Habits for 2017</h1>
 <h2>Introduction</h2>
+<table>
+	<tr>
+		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+	</tr>
+</table>
+
+
 <h2>Early Riser with a Morning Routine</h2>
+<table>
+	<tr>
+		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+	</tr>
+	</table>
+
 <h2>Meditation</h2>
-<h2>Runner</h2>
+<table>
+	<tr>
+		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+	</tr>
+	</table>
+	
+<h2>Marathon Training</h2>
+<table>
+	<tr>
+		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+	</tr>
+	</table>
 </body>
 </html>
