--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
 	<title>Kenn's Keystone Habits for 2017</title>
 </head>
-<body bgcolor = 525252 text=EA9090>
+<body bgcolor = B9B3B3 text=02369E>
 <h1 >Three Keystone Habits for 2017</h1>
 <h2>Introduction</h2>
-<table>
+<table border="1">
 	<tr>
-		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+		<td><img src=https://images.gr-assets.com/books/1366758683l/12609433.jpg alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><p> Hi, my name is Kenn.  Towards the end of last year, I reached a not-too-pleasant life milestone.  I was overweight and and just could not muster up the energy and motivation to do anything.  I did however come across a book called <a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit">"The Power Of Habit,"</a> and I realized two things:
+		<ul>
+			<li> Throughout my life I have been accumulating positive and negative habits, and</li>
+			<li>I can leverage positive habits while eliminating negative ones.</li>
+		</ul>
+		Below are three keystones habit I have been implementing into my life since mid-December 2016 and that have helped level-up my life.</p></td>
 	</tr>
 </table>
 
@@ -29,7 +34,7 @@
 		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
 	</tr>
 	</table>
-	
+
 <h2>Marathon Training</h2>
 <table>
 	<tr>
