added content for early riser section

--- a/index.html
+++ b/index.html
@@ -18,15 +18,32 @@
 	</tr>
 </table>
 
-
 <h2>Early Riser with a Morning Routine</h2>
-<table>
+<table border="1">
 	<tr>
-		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><h3>Early Riser</h3>
+		<p> By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
+		<ol>
+			<li>Instead of being rushed to meet the needs of others, I now start each day foused on myself and my needs.</li>
+			<li>There is something comforting and motivating about waking up with the sun rising.</li>
+			<li>By the time other people are starting their day, I've already gotten a three hour head start on my day.</li>
+		</ol>
+		<ul>
+			<li>Bonus: I actually get intense focused work done because there is no distractions.</li>
+		</ul></p></td>
+		<tr>
+		<td>
+		<h3>Morning Routine</h3>
+		<p>And because by getting up early, I've incresed the number of hours in my day, I've also starting incorporating some pretty powerful morning routins; again all which I am able to get done before I start my day meeting other people's expections and deadlines.  Here are my top 3 morning routines:
+		<ol>
+			<li>Making my bed as soon as I get up</li>
+			<li>Meditating for 15+ hours</li>
+			<li>Training for my first marathon</li>
+		</ol>
+		</p></td>t</tr>
 	</tr>
 	</table>
-
 <h2>Meditation</h2>
 <table>
 	<tr>
