added meditation photo and meditation content.

--- a/index.html
+++ b/index.html
@@ -3,36 +3,40 @@
 <head>
 	<title>Kenn's Keystone Habits for 2017</title>
 </head>
+
 <body bgcolor = B9B3B3 text=02369E>
 <h1 >Three Keystone Habits for 2017</h1>
 <h2>Introduction</h2>
-<table border="1">
+<table>
 	<tr>
 		<td><img src=https://images.gr-assets.com/books/1366758683l/12609433.jpg alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td><p> Hi, my name is Kenn.  Towards the end of last year, I reached a not-too-pleasant life milestone.  I was overweight and and just could not muster up the energy and motivation to do anything.  I did however come across a book called <a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit">"The Power Of Habit,"</a> and I realized two things:
+		<td>Hi, my name is Kenn.  Towards the end of last year, I reached a not-too-pleasant life milestone.  I was overweight and and just could not muster up the energy and motivation to do anything.  I did however come across a book called <a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit">"The Power Of Habit,"</a> and I realized two things:
 		<ul>
 			<li> Throughout my life I have been accumulating positive and negative habits, and</li>
 			<li>I can leverage positive habits while eliminating negative ones.</li>
 		</ul>
-		Below are three keystones habit I have been implementing into my life since mid-December 2016 and that have helped level-up my life.</p></td>
+		Below are three keystones habit I have been implementing into my life since mid-December 2016 and that have helped level-up my life.</td>
 	</tr>
 </table>
 
 <h2>Early Riser with a Morning Routine</h2>
-<table border="1">
+<table>
 	<tr>
 		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td><h3>Early Riser</h3>
-		<p> By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
-		<ol>
-			<li>Instead of being rushed to meet the needs of others, I now start each day foused on myself and my needs.</li>
-			<li>There is something comforting and motivating about waking up with the sun rising.</li>
-			<li>By the time other people are starting their day, I've already gotten a three hour head start on my day.</li>
-		</ol>
-		<ul>
-			<li>Bonus: I actually get intense focused work done because there is no distractions.</li>
-		</ul></p></td>
-		<tr>
+		<td>
+			<h3>Early Riser</h3>
+			<p>By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
+			<ol>
+				<li>Instead of being rushed to meet the needs of others, I now start each day foused on myself and my needs.</li>
+				<li>There is something comforting and motivating about waking up with the sun rising.</li>
+				<li>By the time other people are starting their day, I've already gotten a three hour head start on my day.</li>
+			</ol>
+			<ul>
+				<li>Bonus: I actually get intense focused work done because there is no distractions.
+				</li>
+			</ul></p></td>
+	</tr>
+	<tr>
 		<td>
 		<h3>Morning Routine</h3>
 		<p>And because by getting up early, I've incresed the number of hours in my day, I've also starting incorporating some pretty powerful morning routins; again all which I am able to get done before I start my day meeting other people's expections and deadlines.  Here are my top 3 morning routines:
@@ -41,14 +45,17 @@
 			<li>Meditating for 15+ hours</li>
 			<li>Training for my first marathon</li>
 		</ol>
-		</p></td>t</tr>
+		</p></td>
 	</tr>
-	</table>
+</table>
+
+
 <h2>Meditation</h2>
 <table>
 	<tr>
-		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+		<td><img src="images/meditation.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><p>   I used the <a href =" https://www.headspace.com"> HeadSpace App </a> to keep me motivated and to provide me direction with my medittion practice.  I prefer to meditate in the morning so that I can prime my day for gratitude and success.  I find that by doing so, I my days are purposeful and I am not the stress-case that I used to be.
+		</p></td>
 	</tr>
 	</table>
 
