added meditrunning book image and marathon training content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body bgcolor = B9B3B3 text=02369E>
 <h1 >Three Keystone Habits for 2017</h1>
 <h2>Introduction</h2>
-<table>
+<table border="1">
 	<tr>
 		<td><img src=https://images.gr-assets.com/books/1366758683l/12609433.jpg alt = "Kenn Sugiyama" style="width:240px"></td>
 		<td>Hi, my name is Kenn.  Towards the end of last year, I reached a not-too-pleasant life milestone.  I was overweight and and just could not muster up the energy and motivation to do anything.  I did however come across a book called <a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit">"The Power Of Habit,"</a> and I realized two things:
@@ -20,9 +20,9 @@
 </table>
 
 <h2>Early Riser with a Morning Routine</h2>
-<table>
+<table border="1">
 	<tr>
-		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Sunrise over SF" style="width:240px"> <p><center><a href="http://www.todaysphoto.org/potd/large/san-francisco-sunrise.jpg">Photo Credit: David Yu</a></center></p></td>
 		<td>
 			<h3>Early Riser</h3>
 			<p>By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
@@ -51,19 +51,23 @@
 
 
 <h2>Meditation</h2>
-<table>
+<table border="1">
 	<tr>
-		<td><img src="images/meditation.png" alt = "Kenn Sugiyama" style="width:240px"></td>
+		<td><img src="images/meditation.png" alt = "My meditation corner" style="width:240px"></td>
 		<td><p>   I used the <a href =" https://www.headspace.com"> HeadSpace App </a> to keep me motivated and to provide me direction with my medittion practice.  I prefer to meditate in the morning so that I can prime my day for gratitude and success.  I find that by doing so, I my days are purposeful and I am not the stress-case that I used to be.
 		</p></td>
 	</tr>
 	</table>
 
 <h2>Marathon Training</h2>
-<table>
+<table border="1">
 	<tr>
-		<td><img src="images/kennPic.png" alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td><p> Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo.</p></td>
+		<td>
+		<img src=https://images-na.ssl-images-amazon.com/images/I/412U92ZBKRL._SY344_BO1,204,203,200_.jpg alt = "The Non-Runner's Marathon Trainer Book" style="width:240px"></td>
+		<td>
+		<p> I've never been much of a runner.  In fact, I hated running!  My philosophy was, "Why run, unless you are being chased by a ear."  Well, that has all changed.  Towards the end of last summer, I decided to explore this anti-running attitude and decided to sign up for a half-marathon.  Not knowing what I was doing, I came across an excellent book called, <a href="https://www.amazon.com/Non-Runners-Marathon-Trainer-David-Whitsett/dp/1570281823"> "The Non-Runner's Marathon Trainer." </a> </p>
+		<p>Throuh the mental and physical techniques laid out in this book, I am not proud to say that I absolute love running, and I now know why people run....  hint: it's the addictive euphoric runner's high- IT'S NO JOKE!!!</p>
+		<p>You can take a look at my current training log <a href="runningLog.html">here.</a></p></td>
 	</tr>
 	</table>
 </body>
