Add comments and thoughts on an existing site for assignment.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <h2>Early Riser with a Morning Routine</h2>
 <table border="1">
 	<tr>
-		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Sunrise over SF" style="width:240px"> <p><center><a href="http://www.todaysphoto.org/potd/large/san-francisco-sunrise.jpg">Photo Credit: David Yu</a></center></p></td>
+		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Sunrise over SF" style="width:240px"> <center><a href="http://www.todaysphoto.org/potd/large/san-francisco-sunrise.jpg">Photo Credit: David Yu</a></center></td>
 		<td>
 			<h3>Early Riser</h3>
-			<p>By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
+			By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
 			<ol>
 				<li>Instead of being rushed to meet the needs of others, I now start each day foused on myself and my needs.</li>
 				<li>There is something comforting and motivating about waking up with the sun rising.</li>
@@ -34,18 +34,18 @@
 			<ul>
 				<li>Bonus: I actually get intense focused work done because there is no distractions.
 				</li>
-			</ul></p></td>
+			</ul></td>
 	</tr>
 	<tr>
 		<td>
 		<h3>Morning Routine</h3>
-		<p>And because by getting up early, I've incresed the number of hours in my day, I've also starting incorporating some pretty powerful morning routins; again all which I am able to get done before I start my day meeting other people's expections and deadlines.  Here are my top 3 morning routines:
+		And because by getting up early, I've incresed the number of hours in my day, I've also starting incorporating some pretty powerful morning routins; again all which I am able to get done before I start my day meeting other people's expections and deadlines.  Here are my top 3 morning routines:
 		<ol>
 			<li>Making my bed as soon as I get up</li>
 			<li>Meditating for 15+ hours</li>
 			<li>Training for my first marathon</li>
 		</ol>
-		</p></td>
+		</td>
 	</tr>
 </table>
 
@@ -54,8 +54,8 @@
 <table border="1">
 	<tr>
 		<td><img src="images/meditation.png" alt = "My meditation corner" style="width:240px"></td>
-		<td><p>   I used the <a href =" https://www.headspace.com"> HeadSpace App </a> to keep me motivated and to provide me direction with my medittion practice.  I prefer to meditate in the morning so that I can prime my day for gratitude and success.  I find that by doing so, I my days are purposeful and I am not the stress-case that I used to be.
-		</p></td>
+		<td> I used the <a href =" https://www.headspace.com"> HeadSpace App </a> to keep me motivated and to provide me direction with my medittion practice.  I prefer to meditate in the morning so that I can prime my day for gratitude and success.  I find that by doing so, I my days are purposeful and I am not the stress-case that I used to be.
+		</td>
 	</tr>
 	</table>
 
@@ -65,10 +65,19 @@
 		<td>
 		<img src=https://images-na.ssl-images-amazon.com/images/I/412U92ZBKRL._SY344_BO1,204,203,200_.jpg alt = "The Non-Runner's Marathon Trainer Book" style="width:240px"></td>
 		<td>
-		<p> I've never been much of a runner.  In fact, I hated running!  My philosophy was, "Why run, unless you are being chased by a ear."  Well, that has all changed.  Towards the end of last summer, I decided to explore this anti-running attitude and decided to sign up for a half-marathon.  Not knowing what I was doing, I came across an excellent book called, <a href="https://www.amazon.com/Non-Runners-Marathon-Trainer-David-Whitsett/dp/1570281823"> "The Non-Runner's Marathon Trainer." </a> </p>
-		<p>Throuh the mental and physical techniques laid out in this book, I am not proud to say that I absolute love running, and I now know why people run....  hint: it's the addictive euphoric runner's high- IT'S NO JOKE!!!</p>
-		<p>You can take a look at my current training log <a href="runningLog.html">here.</a></p></td>
+		I've never been much of a runner.  In fact, I hated running!  My philosophy was, "Why run, unless you are being chased by a ear."  Well, that has all changed.  Towards the end of last summer, I decided to explore this anti-running attitude and decided to sign up for a half-marathon.  Not knowing what I was doing, I came across an excellent book called, <a href="https://www.amazon.com/Non-Runners-Marathon-Trainer-David-Whitsett/dp/1570281823"> "The Non-Runner's Marathon Trainer." </a>
+		Throuh the mental and physical techniques laid out in this book, I am not proud to say that I absolute love running, and I now know why people run....  hint: it's the addictive euphoric runner's high- IT'S NO JOKE!!!
+		You can take a look at my current training log <a href="runningLog.html">here.</a></td>
 	</tr>
 	</table>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div>
+	Here is a link to an existing page on keystone habits: <a href="http://www.businessinsider.com/keystone-habits-that-transform-your-life-2015-8/#having-family-dinners-1">Business Insiders:8 keystone habits that can transform your life</a>
+
+	<p>
+		Although I love business Insider articles, I think their site looks sloppy because of all the ads.  Especially the clickbait ads at the bottom of the page.  That said, I found it interesting that they sited the same book as I did, and our sites have the same basic structure.
+	</p>
+</div>
 </body>
 </html>
