stylized and made the site responsive to different screensize for Release 3

--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Kenn's Keystone Habits for 2017</title>
+<head >
+	<meta name="viewport" content="width=device-width" />
+	<link rel="stylesheet" href="stylesheet.css" type="text/css">
+	<title>Kenn's Three Keystone Habits for 2017</title>
 </head>
 
-<body bgcolor = B9B3B3 text=02369E>
-<h1 >Three Keystone Habits for 2017</h1>
-<h2>Introduction</h2>
-<table border="1">
-	<tr>
-		<td><img src=https://images.gr-assets.com/books/1366758683l/12609433.jpg alt = "Kenn Sugiyama" style="width:240px"></td>
-		<td>Hi, my name is Kenn.  Towards the end of last year, I reached a not-too-pleasant life milestone.  I was overweight and and just could not muster up the energy and motivation to do anything.  I did however come across a book called <a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit">"The Power Of Habit,"</a> and I realized two things:
-		<ul>
-			<li> Throughout my life I have been accumulating positive and negative habits, and</li>
-			<li>I can leverage positive habits while eliminating negative ones.</li>
-		</ul>
-		Below are three keystones habit I have been implementing into my life since mid-December 2016 and that have helped level-up my life.</td>
-	</tr>
-</table>
 
-<h2>Early Riser with a Morning Routine</h2>
-<table border="1">
-	<tr>
-		<td rowspan="2"><img src="images/sfSunRise.png" alt = "Sunrise over SF" style="width:240px"> <center><a href="http://www.todaysphoto.org/potd/large/san-francisco-sunrise.jpg">Photo Credit: David Yu</a></center></td>
-		<td>
+<body>
+
+<header>
+	<div id="kennPicDiv">
+	<img src=images/KennPic.png alt = "Kenn"></div>
+	<div id="pageTitle">
+	<h1>Kenn's Three Keystone Habits for 2017</h1>
+	</div>
+</header>
+
+<br>
+
+<main>
+	<section>
+		<h2>Welcome</h2>
+		<div class="divText">
+			<p>Hi, my name is Kenn.  Towards the end of last year, I reached a not-too-pleasant life milestone.  I was overweight and and just could not muster up the energy and motivation to do anything.  I did however come across a book called <a href=https://www.goodreads.com/book/show/12609433-the-power-of-habit>"The Power Of Habit,"</a> and I realized two things:
+			<ul>
+				<li> Throughout my life I have been accumulating positive and negative habits, and</li>
+				<li>I can leverage positive habits while eliminating negative ones.</li>
+			</ul></p>
+			<p> Below are three keystones habit I have been implementing into my life since mid-December 2016 and that have helped level-up my life.</p>
+		</div>
+		<div class="image">
+			<figure>
+				<img src=https://images.gr-assets.com/books/1366758683l/12609433.jpg alt = "power of Habit Book">
+			</figure>
+		</div>
+	</section>
+
+	<section>
+		<h2>Early Riser With A Morning Ritual</h2>
+		<div class="image">
+			<figure>
+				<img class="topicPic" id=leftPic src="images/sfSunRise.png" alt = "Sunrise Over SF">
+				<figcaption><a href=http://www.todaysphoto.org/potd/large/san-francisco-sunrise.jpg>Photo Credit: David Yu</a>
+				</figcaption>
+			</figure>
+		</div>
+		<div class="divText">
 			<h3>Early Riser</h3>
-			By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:
+			<p>By nature, I am a night owl.  Although right now I am comfortably getting up at around 6:30 am, my goal is to eventually START my day by 6am.  Here are my top 3 reasons why I want to become an early riser:</p>
 			<ol>
 				<li>Instead of being rushed to meet the needs of others, I now start each day foused on myself and my needs.</li>
 				<li>There is something comforting and motivating about waking up with the sun rising.</li>
@@ -34,50 +57,49 @@
 			<ul>
 				<li>Bonus: I actually get intense focused work done because there is no distractions.
 				</li>
-			</ul></td>
-	</tr>
-	<tr>
-		<td>
-		<h3>Morning Routine</h3>
-		And because by getting up early, I've incresed the number of hours in my day, I've also starting incorporating some pretty powerful morning routins; again all which I am able to get done before I start my day meeting other people's expections and deadlines.  Here are my top 3 morning routines:
-		<ol>
-			<li>Making my bed as soon as I get up</li>
-			<li>Meditating for 15+ hours</li>
-			<li>Training for my first marathon</li>
-		</ol>
-		</td>
-	</tr>
-</table>
+			</ul>
+			<h3>Morning Routine</h3>
+			<p>And because by getting up early, I've incresed the number of hours in my day, I've also starting incorporating some pretty powerful morning routins; again all which I am able to get done before I start my day meeting other people's expections and deadlines.  Here are my top 3 morning routines:</p>
+			<ol>
+				<li>Making my bed as soon as I get up</li>
+				<li>Meditating for 15+ hours</li>
+				<li>Training for my first marathon</li>
+			</ol>
+		</div>
+	</section>
+
+<section>
+	<h2>Meditation</h2>
+	<div class="divText">
+	<p>I used the <a href =" https://www.headspace.com"> HeadSpace App </a> to keep myself motivated and to provide me direction with my medittion practice.  I prefer to meditate in the morning so that I can prime my day for gratitude and success.  I find that by doing so, I my days are purposeful and I am not the stress-case that I used to be.</p>
+	</div>
+	<div class="image">
+	<figure>
+		<img class="topicPic" id=rightPic src="images/meditation.png" alt = "My meditation corner">
+	</figure>
+	</div>
+
+</section>
 
 
-<h2>Meditation</h2>
-<table border="1">
-	<tr>
-		<td><img src="images/meditation.png" alt = "My meditation corner" style="width:240px"></td>
-		<td> I used the <a href =" https://www.headspace.com"> HeadSpace App </a> to keep me motivated and to provide me direction with my medittion practice.  I prefer to meditate in the morning so that I can prime my day for gratitude and success.  I find that by doing so, I my days are purposeful and I am not the stress-case that I used to be.
-		</td>
-	</tr>
-	</table>
+<section>
+	<h2>Training For My First Marathon</h2>
+	<div class="image">
+	<figure>
+		<img src=https://images-na.ssl-images-amazon.com/images/I/412U92ZBKRL._SY344_BO1,204,203,200_.jpg alt = "The Non-Runner's Marathon Trainer Book">
+	</figure>
+	</div>
+	<div class="divText">
+	<p>	I've never been much of a runner.  In fact, I hated running!  My philosophy was, "Why run, unless you are being chased by a ear."  Well, that has all changed.  Towards the end of last summer, I decided to explore this anti-running attitude and decided to sign up for a half-marathon.  Not knowing what I was doing, I came across an excellent book called, <a href="https://www.amazon.com/Non-Runners-Marathon-Trainer-David-Whitsett/dp/1570281823"> "The Non-Runner's Marathon Trainer." </a></p>
+	Throuh the mental and physical techniques laid out in this book, I am not proud to say that I absolute love running, and I now know why people run....  hint: it's the addictive euphoric runner's high- IT'S NO JOKE!!!</p>
+	<p>You can take a look at my current training log <a href="runningLog.html">here.</a></p>
+	</div>
+</section>
+</main>
 
-<h2>Marathon Training</h2>
-<table border="1">
-	<tr>
-		<td>
-		<img src=https://images-na.ssl-images-amazon.com/images/I/412U92ZBKRL._SY344_BO1,204,203,200_.jpg alt = "The Non-Runner's Marathon Trainer Book" style="width:240px"></td>
-		<td>
-		I've never been much of a runner.  In fact, I hated running!  My philosophy was, "Why run, unless you are being chased by a ear."  Well, that has all changed.  Towards the end of last summer, I decided to explore this anti-running attitude and decided to sign up for a half-marathon.  Not knowing what I was doing, I came across an excellent book called, <a href="https://www.amazon.com/Non-Runners-Marathon-Trainer-David-Whitsett/dp/1570281823"> "The Non-Runner's Marathon Trainer." </a>
-		Throuh the mental and physical techniques laid out in this book, I am not proud to say that I absolute love running, and I now know why people run....  hint: it's the addictive euphoric runner's high- IT'S NO JOKE!!!
-		You can take a look at my current training log <a href="runningLog.html">here.</a></td>
-	</tr>
-	</table>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<div>
-	Here is a link to an existing page on keystone habits: <a href="http://www.businessinsider.com/keystone-habits-that-transform-your-life-2015-8/#having-family-dinners-1">Business Insiders:8 keystone habits that can transform your life</a>
-
-	<p>
-		Although I love business Insider articles, I think their site looks sloppy because of all the ads.  Especially the clickbait ads at the bottom of the page.  That said, I found it interesting that they sited the same book as I did, and our sites have the same basic structure.
-	</p>
-</div>
+<footer></footer>
 </body>
+
 </html>
+
+
