--- a/runningLog.html
+++ b/runningLog.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Kenn's Running Log</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
+
 <body>
 <h1>This is my Running Log for the past 5 weeks</h1>
 
