fixed image not loading

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
 	<div id="kennPicDiv">
-	<img src=images/KennPic.png alt = "Kenn"></div>
+	<img src=images/kennPic.png alt = "Kenn"></div>
 	<div id="pageTitle">
 	<h1>Kenn's Three Keystone Habits for 2017</h1>
 	</div>
